2001-06-04  Corey Minyard <minyard@acm.org>

	* Initial creation.