@@ -34,12 +34,12 @@
 2003:raw:5:/dev/ttyS2:9600
 2004:raw:5:/dev/ttyS3:9600
 2005:raw:5:/dev/ttyS4:9600
-2006:raw:5:/dev/ttyS4:9600
-2007:raw:5:/dev/ttyS5:9600
-3001:telnet:0:/dev/ttyS1:9600
-3002:telnet:0:/dev/ttyS2:9600
-3003:telnet:0:/dev/ttyS3:9600
-3004:telnet:0:/dev/ttyS4:9600
-3005:telnet:0:/dev/ttyS5:9600
-3006:telnet:0:/dev/ttyS6:9600
-3007:telnet:0:/dev/ttyS7:9600
+2006:raw:5:/dev/ttyS5:9600
+2007:raw:5:/dev/ttyS6:9600
+3001:telnet:0:/dev/ttyS0:9600
+3002:telnet:0:/dev/ttyS1:9600
+3003:telnet:0:/dev/ttyS2:9600
+3004:telnet:0:/dev/ttyS3:9600
+3005:telnet:0:/dev/ttyS4:9600
+3006:telnet:0:/dev/ttyS5:9600
+3007:telnet:0:/dev/ttyS6:9600
